[Note that all dates are in English, not American format - i.e. day/month/year]

Alpha Release 9
===============
Skip Montanaro    07/02/2004  New script - tte.py: Train to exhaustion based upon my understanding of the technique as described in Gary Robinson's blog.
Tony Meyer        05/02/2004  Web interface: added a third configuration page, which dynamically has all the experimental options (not the deprecated ones).
Tony Meyer        05/02/2004  Make all the scripts consistent in their command line setting of database type/name.  -d is dbm, -p is pickle.  Also setup things nicer for mysql and pgsql.
Tony Meyer        05/02/2004  If the allowed values for an option is a tuple of values, then the type is correct if the value is one of those types. 
Tony Meyer        05/02/2004  Outlook: If the special folders can't be found, then report this to the user.
Tony Meyer        05/02/2004  ProxyUI: Do the save one line earlier, which might mean that if the user has closed the browser, a db error is avoided.
Tony Meyer        05/02/2004  imapfilter has been adding two mailid headers, so stop that.
Tony Meyer        05/02/2004  Fix [ 890645 ] imapfilter: "ValueError: year out of range"
Skip Montanaro    30/01/2004  Recognize "abbreviated" URLs of the form www.xyz.com or ftp.xyz.com as http://www.xyz.com and ftp://ftp.xyz.com, respectively.  This gets rid of some fairly common "skip:w NNN" tokens. Enabled by the new tokenizer option, x-fancy_url_recognition.
Skip Montanaro    29/01/2004  sb_mboxtrain.py: preserve modtimes in Maildir & MH mailboxes
Tony Meyer        27/01/2004  Fix [ 870799 ] imap trying to fetch invalid message UID
Tony Meyer        27/01/2004  Fix [ 881427 ] sb_mboxtrain.py requires -d or -D
Tony Meyer        27/01/2004  Add options to ImapUI that the ProxyUI has, and also belong there.
Kenny Pitt        22/01/2004  Outlook: Fix confusing error log message.  Timer delay values are configured in seconds, not milliseconds.